<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Resultat_Negatif">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:text="@string/bravo"
                android:textColor="#11FF00"
                android:textSize="40dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:text="/"
                android:textColor="#000000"
                android:textSize="40dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:text="@string/Lose_Label"
                android:textColor="#FF0000"
                android:textSize="40dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <TextView
            android:id="@+id/Space4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="#000000"
            android:textSize="40dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="100dp" />

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/Recommencer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommencer" />

            <Button
                android:id="@+id/ToScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aller_aux_scores" />

            <Button
                android:id="@+id/ToMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aller_au_menu_principal" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>