<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Score">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="508dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_d_op_ration_r_ussites_xx"
                android:textColor="@color/black"
                android:textSize="30dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taux_de_r_ussite_xx"
                android:textColor="@color/black"
                android:textSize="30dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_xx"
                android:textColor="@color/black"
                android:textSize="30dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="413dp"
                android:layout_height="81dp"
                android:text="@string/derni_re_op_ration_avec_r_ussite_xx"
                android:textColor="@color/black"
                android:textSize="30dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="78dp"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/BackToMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revenir_en_arri_re" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>